# libOpenDTP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
examples/: CMakeLists.txt  play_audio.cpp  record_audio.cpp
include/opendtp/: Client.hpp  Common.hpp  Protocol.hpp  Types.hpp
src/: Client.cpp  Protocol.cpp  Sha256.cpp  Sha256.hpp
tests/: CMakeLists.txt  test_client.cpp  test_protocol.cpp
